src/test/deca/context/valid/exemple_sans_objet.deca
// Description:
//    Programme du cours, exemple pour la partie sans objet.
//
// Resultats:
//      0.5*x²
// Historique:
//    cree le 04/01/2023

{
   int x ;
   x=readInt() ;
   println(0.5*(x*x)) ;
}