src/test/deca/context/invalid/objet/field_already_defined1.deca
// Description:
//     Declaration de deux fields de même nom.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A {
    protected int x;
    int x;
}


